<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_activity"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#eee" > 

    <RelativeLayout
        android:id="@+id/main_bottom"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="@color/holo_light"
        >
        <View
		    android:layout_width="fill_parent"
		    android:layout_height="1dp"
		    android:background="@color/mid_blue"/>
        
        
        <ImageView
        	android:id="@+id/img_tab_now"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"        	     	
        	android:scaleType="matrix"
        	android:layout_gravity="bottom"            	
            android:layout_alignParentBottom="true" />              
         
         
         <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            
        	>
        	
             <RadioGroup
        		    android:id="@+id/main_radio"
        		    android:layout_width="fill_parent"
        		    android:layout_height="50dp"
        		    android:layout_gravity="bottom"
        		    android:gravity="center_vertical"
        		    android:orientation="horizontal" >

        		    <Button
		                android:id="@+id/add_button"
		                style="@style/main_tab_bottom"
		                android:layout_marginTop="2.0dip"
		                android:drawableTop="@drawable/tab_add"
		                android:text="@string/add" />
        		    
		            <RadioButton
		                android:id="@+id/calendar_button"
		                style="@style/main_tab_bottom"
		                android:layout_marginTop="2.0dip"
		                android:drawableTop="@drawable/tab_calendar"
		                android:text="@string/calendar" />


  
		            <RadioButton 
		                android:id="@+id/map_button" 
		                android:checked="true"
		                android:layout_marginTop="2.0dip" 
		                android:text="@string/map" 
		                android:drawableTop="@drawable/tab_map" 
		                style="@style/main_tab_bottom" />  
		            <Button 
		                android:id="@+id/settings_button" 
		                android:layout_marginTop="2.0dip" 
		                android:text="@string/settings" 
		                android:drawableTop="@drawable/tab_settings" 
		                style="@style/main_tab_bottom" />  
		     </RadioGroup>
		     
                        <ImageButton
		                android:id="@+id/facebookShare"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                 android:visibility="gone"
		                 style="@style/main_tab_bottom"
		                android:src="@drawable/ic_action_share"  />		
             
						<ImageButton
		                android:id="@+id/deleteMarker"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                 android:visibility="gone"
		                 style="@style/main_tab_bottom"
		                android:src="@drawable/ic_action_discard" />
              			            		    
 			            	 
    	</LinearLayout>     
       
    </RelativeLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="fill_parent" 
    	android:layout_alignParentTop="true"
    	android:layout_above="@id/main_bottom"       
        android:orientation="vertical" >
      
        <com.comp3111.localendar.support.NonSwipeableViewPager
        	android:id="@+id/tabpager"
        	android:layout_width="match_parent"
        	android:layout_height="match_parent"
        	android:layout_gravity="center" > 
        </com.comp3111.localendar.support.NonSwipeableViewPager>  
    </LinearLayout>

</RelativeLayout>
